Angular part 2 - cache

--- a/Projekt Web API/Papu/Papu/wwwroot/hello.html
+++ b/Projekt Web API/Papu/Papu/wwwroot/hello.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     JESTEM PRZED MVC I SPA
+    <p>To jest test app.UseStaticFiles();</p>
+    <p>A co z Cache?</p>
 </body>
 </html>
